RESOLVED FIXED100305
[BlackBerry] Geolocation is segfaulting
https://bugs.webkit.org/show_bug.cgi?id=100305
Summary [BlackBerry] Geolocation is segfaulting
otcheung
Reported 2012-10-24 16:20:56 PDT
Geolocation sometimes segfaults when we toggle site permissions.
Attachments
Patch (6.53 KB, patch)
2012-10-24 16:32 PDT, otcheung
no flags
Patch (6.52 KB, patch)
2012-10-24 16:40 PDT, otcheung
no flags
otcheung
Comment 1 2012-10-24 16:32:41 PDT
Rob Buis
Comment 2 2012-10-24 16:40:01 PDT
Comment on attachment 170508 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170508&action=review Some things to fix still before landing. > Source/WebKit/blackberry/WebCoreSupport/GeolocationClientBlackBerry.cpp:84 > + return; Please indent. > Source/WebKit/blackberry/WebCoreSupport/GeolocationClientBlackBerry.cpp:87 > + m_pendingPermissionGeolocation = RefPtr<Geolocation>(location); Maybe you can leave off the RefPtr<Geolocation>.
otcheung
Comment 3 2012-10-24 16:40:56 PDT
Rob Buis
Comment 4 2012-10-24 16:43:01 PDT
Comment on attachment 170513 [details] Patch Ok.
WebKit Review Bot
Comment 5 2012-10-24 19:01:30 PDT
Comment on attachment 170513 [details] Patch Clearing flags on attachment: 170513 Committed r132440: <http://trac.webkit.org/changeset/132440>
WebKit Review Bot
Comment 6 2012-10-24 19:01:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.