[BlackBerry] Geolocation is segfaulting https://bugs.webkit.org/show_bug.cgi?id=100305

Patch by Otto Derek Cheung <otcheung@rim.com> on 2012-10-24
Reviewed by Rob Buis.

We weren't wrapping the Geolocation object in a RefPtr when we call setIsAllowed in
GeolocationClientBlackBerry::onPermission.

This patch also removes all references of the Geolocation object in WebPageClientImpl.
One RefPtr<Geolocation> is used to store the reference of the WebCore object on our port.

We don't need a mapping between origin -> context of Geolocation because in our port,
one WebPage.cpp contains one GeolocationController only.

* Api/WebPageClient.h:
* WebCoreSupport/GeolocationClientBlackBerry.cpp:
(frameOrigin):
(GeolocationClientBlackBerry::requestPermission):
(GeolocationClientBlackBerry::cancelPermissionRequest):
(GeolocationClientBlackBerry::onPermission):
* WebCoreSupport/GeolocationClientBlackBerry.h:
(GeolocationClientBlackBerry):

Canonical link: https://commits.webkit.org/118354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132440 268f45cc-cd09-0410-ab3c-d52691b4dbfc